Fix menu close button position on smaller screens.

--- a/site/web/app/themes/brandonrp/assets/styles/modules/_nav.scss
+++ b/site/web/app/themes/brandonrp/assets/styles/modules/_nav.scss
@@ -187,6 +187,14 @@
         &:before {
           content: 'q';
         }
+
+        @media (max-width: $screen-sm) {
+          top: -7rem;
+        }
+
+        @media (max-width: $screen-xs) {
+          top: -5rem;
+        }
       }
     }
 
